--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     async function loadVideoURL() {
         try {
-            const response = await fetch('/envivo.json');
+            const response = await fetch('https://raw.githubusercontent.com/nezzul/TRANSMISI-N-EN-VIVO/refs/heads/main/envivo.json');
             const data = await response.json();
             const videoFrame = document.getElementById('videoFrame');
             const videoContainer = document.getElementById('videoContainer');
 
             setInterval(() => {
-                fetch('/envivo.json')
+                fetch('https://raw.githubusercontent.com/nezzul/TRANSMISI-N-EN-VIVO/refs/heads/main/envivo.json')
                 .then(response => response.json())
                 .then(data => {
                     if (data.showVideo !== lastShowVideo) {
